--- a/lecture-3/src/App.css
+++ b/lecture-3/src/App.css
@@ -5,12 +5,16 @@
 @font-face {
   font-family: BMYEONSUNG;
   src: local("BMYEONSUNG"),
-    url("./assets/fonts/BMYEONSUNG.woff2") format("woff2"),
-    url("./assets/fonts/BMYEONSUNG.woff") format("woff"),
+    url("./assets/fonts/subset-BMYEONSUNG.woff2") format("woff2"),
+    url("./assets/fonts/subset-BMYEONSUNG.woff") format("woff"),
     url("./assets/fonts/BMYEONSUNG.ttf") format("truetype");
   font-display: block;
 }
 
 .BannerVideo {
+  font-family: "BMYEONSUNG", sans-serif;
+}
+
+.BannerImage {
   font-family: "BMYEONSUNG", sans-serif;
 }
