--- a/lecture-3/src/App.css
+++ b/lecture-3/src/App.css
@@ -8,7 +8,7 @@
     url("./assets/fonts/subset-BMYEONSUNG.woff2") format("woff2"),
     url("./assets/fonts/subset-BMYEONSUNG.woff") format("woff"),
     url("./assets/fonts/BMYEONSUNG.ttf") format("truetype");
-  font-display: block;
+  /* font-display: block; */
   /* A 글자만 폰트 적용*/
   /* unicode-range: u+0041;  */
 }
